Fix: Client panel back navigation returns to correct project
- Added project_id parameter support to dashboard_client view
- Updated dashboard_client_premium.html to use active_project_index
- Modified all client templates to pass project_id when navigating back
- Added conditional breadcrumbs for shared templates (client vs admin/PM)

--- a/core/templates/core/client_project_calendar.html
+++ b/core/templates/core/client_project_calendar.html
@@ -554,7 +554,7 @@
                     </h1>
                     <p class="project-subtitle">{{ project.name }}</p>
                 </div>
-                <a href="{% url 'client_project_view' project.id %}" class="btn-back">
+                <a href="{% url 'client_project_view' project.id %}" class="btn-back" data-project-id="{{ project.id }}">
                     <i class="bi bi-arrow-left"></i>
                     {% trans "Back to Project" %}
                 </a>
