--- a/core/templates/core/floor_plan_detail.html
+++ b/core/templates/core/floor_plan_detail.html
@@ -64,7 +64,11 @@
 <div class="container-fluid py-3">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
+      {% if request.user.profile.role == 'client' %}
+      <li class="breadcrumb-item"><a href="{% url 'client_project_view' project.id %}">{{ project.name }}</a></li>
+      {% else %}
       <li class="breadcrumb-item"><a href="{% url 'project_overview' project.id %}">{{ project.name }}</a></li>
+      {% endif %}
       <li class="breadcrumb-item"><a href="{% url 'floor_plan_list' project.id %}">Planos</a></li>
       <li class="breadcrumb-item active">{{ plan.name }}</li>
     </ol>
