--- a/core/templates/core/changeorder_signature_success.html
+++ b/core/templates/core/changeorder_signature_success.html
@@ -138,7 +138,7 @@
         </div>
         {% endif %}
         <div class="back-link">
-            <a href="{% url 'dashboard_client' %}">
+            <a href="{% url 'dashboard_client' %}?project_id={{ changeorder.project.id }}">
                 <i class="bi bi-arrow-left me-1"></i> {% trans "Return to Dashboard" %}
             </a>
         </div>
