--- a/core/templates/core/color_sample_list.html
+++ b/core/templates/core/color_sample_list.html
@@ -4,7 +4,7 @@
 <div class="container py-3">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{% url 'dashboard_client' %}">Mis Proyectos</a></li>
+      <li class="breadcrumb-item"><a href="{% url 'dashboard_client' %}?project_id={{ project.id }}">Mis Proyectos</a></li>
       <li class="breadcrumb-item"><a href="{% url 'client_project_view' project.id %}">{{ project.name }}</a></li>
       <li class="breadcrumb-item active">Colores</li>
     </ol>
